added api and swagger for customer and category
