# model.go
@@ -1,16 +1,17 @@
 package main
 
-import "time"
-
 type CreateOrGetCustomer struct {
-	Id          int64     `json:"id"`
-	FirstName   string    `json:"firstname"`
-	LastName    string    `json:"lastname"`
-	PhoneNumber string    `json:"phone_number"`
-	Gender      bool      `json:"gender"`
-	BirthDate   time.Time `json:"birth_date"`
-	Balance     float64   `json:"balance"`
-	CreatedAt   time.Time `json:"created_at"`
+	FirstName   string  `json:"firstname"`
+	LastName    string  `json:"lastname"`
+	PhoneNumber string  `json:"phone_number"`
+	Gender      bool    `json:"gender"`
+	BirthDate   string  `json:"birth_date"`
+	Balance     float64 `json:"balance"`
+}
+
+type CreateCategory struct {
+	Name      string    `json:"name"`
+	ImageUrl  string    `json:"image_url"`
 }
 
 type ResponseOK struct {
@@ -20,3 +21,5 @@ type ResponseOK struct {
 type ResponseError struct {
 	Message string `json:"message"`
 }
+
+type CustomerID int64
