# server.go
@@ -23,7 +23,14 @@ func NewServer(db *DBManager) *gin.Engine {
 		db: db,
 	}
 	r.GET("/shop/customer/:id", h.GetCustomer)
-	
+	r.POST("/shop/customer/create", h.CreateCustomer)
+	r.PUT("/shop/customer/update/:id", h.UpdateCustomer)
+	r.DELETE("/shop/customer/delete/:id", h.DeleteCustomer)
+	r.GET("/shop/customer/all", h.GetAllCustomer)
+
+	r.POST("/shop/category/create", h.CreateCategory)
+	r.GET("/shop/category/:id", h.GetCategory)
+	r.PUT("/shop/category/update/:id", h.UpdateCategory)
 
 	r.GET("swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	return r
